Dibuat menggunakan Colab

--- a/Tugas_Data_Mining.ipynb
+++ b/Tugas_Data_Mining.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9duTXhnzpeFnLFZ2D4XJU",
+      "authorship_tag": "ABX9TyOk/LOacOtQPcvsNgP5SG8m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## **MEMUAT DATA**"
+      ],
+      "metadata": {
+        "id": "GcDRe8wXKPhE"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd"
@@ -36,6 +45,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Melakukan Import data csv"
+      ],
+      "metadata": {
+        "id": "NMf-87NZKfH6"
+      }
     },
     {
       "cell_type": "markdown",
@@ -78,6 +96,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "masukan kedalam data frame"
+      ],
+      "metadata": {
+        "id": "Zeh9enyPKIBN"
+      }
     },
     {
       "cell_type": "code",
@@ -647,6 +674,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Memeriksa Tipe Data Dan Data Hilang/Data Kosong"
+      ],
+      "metadata": {
+        "id": "qcWHjDkWKxPR"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "movdf.info()"
@@ -723,6 +759,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### MELAKUKAN PEMBERSIHAN DATA\n"
+      ],
+      "metadata": {
+        "id": "tRaMUMHnK9Iq"
+      }
     },
     {
       "cell_type": "code",
@@ -1337,6 +1382,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "MELAKUKAN TRANSFORMASI DATA"
+      ],
+      "metadata": {
+        "id": "kdH1hJamLXk4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Melakukan pengecekan data"
+      ],
+      "metadata": {
+        "id": "7fKLq1wuLmSW"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "movdf.dtypes"
@@ -1454,6 +1517,16 @@
           "execution_count": 22
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mengubah Tipe datanya\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ZMoBBoJwLwSJ"
+      }
     },
     {
       "cell_type": "code",
@@ -1575,6 +1648,15 @@
           "execution_count": 23
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Selanjutnya melakukan normalisasi text"
+      ],
+      "metadata": {
+        "id": "atJMoW10L2sC"
+      }
     },
     {
       "cell_type": "code",
@@ -2156,6 +2238,15 @@
           "execution_count": 24
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**MELAKUKAN PENYIMPANAN DATA**"
+      ],
+      "metadata": {
+        "id": "xpFG-5F-L8yL"
+      }
     },
     {
       "cell_type": "code",
